--- a/test/test.hbs
+++ b/test/test.hbs
@@ -1,4 +1,4 @@
 {{string-concat "clive" "hater" "nigeria"}}
 {{string-replace "yeahho" "ho" "trick"}}
 {{string-padRight "clive" 20 "-"}}
-{{string-padRight 13 20 "-"}}ok
+{{string-padRight 13 20 "-"}}
